--- a/homepage/css/active.css
+++ b/homepage/css/active.css
@@ -1,6 +1,6 @@
-.active {
+a.active {
   color: #f1f2ec;
-  background-color: #33327e;
+  background-color: #7e3232;
   padding: 5px 10px;
   border-radius: 5px;
 }
