--- a/homepage/css/main.css
+++ b/homepage/css/main.css
@@ -3,22 +3,25 @@ body {
   font-family: 'Helvetica', sans-serif;
   background: #f1f2ec;
   color: #333;
+  padding-top: 250px;
 }
 
 header {
   background: #33327e;
   color: #f1f2ec;
-  padding: 30px 20px;
+  padding: 30px 0px;
   text-align: center;
   top: 0;
   width: 100%;
   z-index: 1000;
+  position: fixed;
 }
 
 nav {
   background: #f1f2ec;
-  padding: 10px 20px;
+  padding: 10px 0px;
   text-align: center;
+  gap: 30px;
 }
 
 nav a {
