--- a/homepage/css/main.css
+++ b/homepage/css/main.css
@@ -3,25 +3,31 @@ body {
   font-family: 'Helvetica', sans-serif;
   background: #f1f2ec;
   color: #333;
-  padding-top: 250px;
+  padding-top: 0px;
 }
 
 header {
   background: #33327e;
   color: #f1f2ec;
-  padding: 30px 0px;
+  padding: 20px 0 10px;
   text-align: center;
   top: 0;
   width: 100%;
-  z-index: 1000;
-  position: fixed;
+  z-index: 1;
+  position: relative;
 }
 
 nav {
   background: #f1f2ec;
-  padding: 10px 0px;
+  padding: 15px 0px;
   text-align: center;
   gap: 30px;
+  z-index: 2;
+  position: fixed;
+  top: 170px;
+  left: 0;
+  width: 100%;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
 
 nav a {
@@ -32,7 +38,7 @@ nav a {
 }
 
 nav a.active {
-  border-bottom: 2px solid #f1f2ec;
+  border-bottom: 2px solid #33327e;
 }
 
 
@@ -79,4 +85,15 @@ footer {
   padding: 10px 20px;
   text-decoration: none;
   border-radius: 5px;
+}
+
+@media (max-width: 768px) {
+  nav a {
+    display: block;
+    margin: 10px 0;
+  }
+
+  nav {
+    padding: 10px;
+  }
 }
