--- a/homepage/css/header-inner.css
+++ b/homepage/css/header-inner.css
@@ -2,7 +2,7 @@
   position: fixed;
   top: 20px;
   left: 20px;
-  background: rgba(255, 255, 255, 0.8); /* ”¼“§–¾”’ */
+  background: rgba(255, 255, 255, 0.8);
   border-radius: 16px;
   padding: 20px 30px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
