--- a/homepage/css/toTopBtn.css
+++ b/homepage/css/toTopBtn.css
@@ -10,7 +10,7 @@
   padding: 10px 15px;
   border-radius: 50%;
   cursor: pointer;
-  display: none; /* Å‰‚Í”ñ•\¦ */
+  display: none;
   box-shadow: 0 4px 6px rgba(0,0,0,0.2);
 }
 #toTopBtn:hover {
