--- a/homepage/css/nav.css
+++ b/homepage/css/nav.css
@@ -6,7 +6,7 @@
 }
 
 /* ハンバーガーボタン */
-.nav-toggle {
+.nav-Toggle {
   display: none;
   flex-direction: column;
   cursor: pointer;
@@ -21,7 +21,7 @@
   font-size: 24px;
 }
 
-.nav-toggle span {
+.nav-Toggle span {
   height: 3px;
   background-color: #333;
   width: 100%;
@@ -46,7 +46,7 @@
     display: flex;
   }
 
-  .nav-toggle {
+  .nav-Toggle {
     display: flex;
   }
 }
@@ -60,7 +60,7 @@
     position: static;
   }
 
-  .nav-toggle {
+  .nav-Toggle {
     display: none;
   }
 }
