--- a/homepage/css/nav.css
+++ b/homepage/css/nav.css
@@ -1,8 +1,28 @@
 /* ====== 共通スタイル ====== */
 .nav {
+  background: #f1f2ec;
+  padding: 15px 10px;
+  text-align: center;
+  gap: 30px;
+  z-index: 2;
+  position: sticky;
+  top: 0px;
+  left: 0;
+  width: calc(100% - 20px);
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
   display: flex;
   justify-content: center;
-  gap: 20px;
+}
+
+nav a {
+  margin: 0 15px;
+  text-decoration: none;
+  color: #33327e;
+  font-weight: bold;
+}
+
+nav a.active {
+  border-bottom: 2px solid #33327e;
 }
 
 /* ハンバーガーボタン */
