nav fine tuning

--- a/homepage/css/nav.css
+++ b/homepage/css/nav.css
@@ -1,5 +1,5 @@
 /* ====== 共通スタイル ====== */
-.nav {
+nav {
   background: #f1f2ec;
   padding: 15px 10px;
   text-align: center;
@@ -10,7 +10,6 @@
   left: 0;
   width: calc(100% - 20px);
   box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-  display: flex;
   justify-content: center;
 }
 
