--- a/homepage/css/toTopBtn.css
+++ b/homepage/css/toTopBtn.css
@@ -11,8 +11,9 @@
   border-radius: 50%;
   cursor: pointer;
   display: none;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.2);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
+
 #toTopBtn:hover {
   background-color: #5555aa;
 }
