fix nav position:sticky

--- a/homepage/css/nav.css
+++ b/homepage/css/nav.css
@@ -97,7 +97,7 @@ nav a.active {
   .nav {
     justify-content: center;
     gap: 30px;
-    position: static;
+    position: sticky;
   }
 
   .nav-toggle {
