--- a/homepage/css/main.css
+++ b/homepage/css/main.css
@@ -31,6 +31,12 @@ h4 {
   font-size: 20px;
 }
 
+h5 {
+  font-size: 16px;
+  text-decoration: underline;
+  margin-left: 20px;
+}
+
 footer {
   background: #33327e;
   color: #f1f2ec;
