--- a/homepage/css/nav.css
+++ b/homepage/css/nav.css
@@ -8,7 +8,7 @@ nav {
   position: sticky;
   top: 0px;
   left: 0;
-  width: calc(100% - 20px);
+  width: calc(100%);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   justify-content: center;
 }
@@ -18,6 +18,13 @@ nav a {
   text-decoration: none;
   color: #33327e;
   font-weight: bold;
+  padding: 10px 5px 5px 5px;
+  border-bottom: 2px solid transparent;
+  transition: border-bottom-color 0.3s;
+}
+
+nav a:hover {
+  border-bottom-color: #33327e;
 }
 
 nav a.active {
